// ============================================================================
// /supplychain/visibility-service (版本 2.0)
// 描述: 提供端到端的供应链可见性，整合来自不同微服务的事件和状态。
// ============================================================================

syntax = "proto3";

package sc.vs.v1;

option go_package = "github.com/enterprise/erp/protos/sc/vs;vs";


import "google/protobuf/timestamp.proto";
import "common/common.proto";
import "google/api/annotations.proto";

// ============================================================================
// 服务定义: VisibilityService
// ============================================================================

service VisibilityService {
  // 根据销售订单号跟踪整个订单到现金的流程
  rpc TrackSalesOrderFlow(TrackRequest) returns (SalesOrderFlow) {

    option (google.api.http) = {

      post: "/api/v1/supplychain/track-sales-order-flow"

      body: "*"

    };

  }

  // 根据采购订单号跟踪整个采购到付款的流程
  rpc TrackPurchaseOrderFlow(TrackRequest) returns (PurchaseOrderFlow) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/track-purchase-order-flow"


      body: "*"


    };


  }

  // 订阅流程事件 (Streaming) (New)
  rpc SubscribeToFlowEvents(SubscribeRequest) returns (stream FlowEvent) {


    option (google.api.http) = {


      post: "/api/v1/supplychain/subscribe-to-flow-events"


      body: "*"


    };


  }
  
  // 获取流程摘要
  rpc GetFlowSummary(GetFlowSummaryRequest) returns (FlowSummary) {

  
    option (google.api.http) = {

  
      get: "/api/v1/supplychain/flow-summary"

  
    };

  
  }
}

// ============================================================================
// 数据结构: Flows (流程)
// ============================================================================

// 销售订单流程
message SalesOrderFlow {
  // 销售订单状态
  DocumentStatus sales_order = 1;
  // 交货单状态
  repeated DocumentStatus deliveries = 2;
  // 货运单状态
  repeated DocumentStatus shipments = 3;
  // 发票状态
  repeated DocumentStatus invoices = 4;
  // 付款状态
  DocumentStatus payment = 5;
  // 总体流转状态
  common.v1.FlowStatus overall_status = 6;
}

// 采购订单流程
message PurchaseOrderFlow {
  // 采购订单状态
  DocumentStatus purchase_order = 1;
  // 收货状态
  repeated DocumentStatus goods_receipts = 2;
  // 发票状态
  repeated DocumentStatus invoices = 3;
  // 付款状态
  DocumentStatus payment = 4;
  // 总体流转状态
  common.v1.FlowStatus overall_status = 5;
}

// 文档状态
message DocumentStatus {
  // 文档编号
  string document_number = 1;
  // 文档类型 (SalesOrder, Delivery, Invoice, etc.)
  common.v1.DocumentType document_type = 2;
  // 当前状态
  string status_code = 3;
  // 状态描述
  string status_description = 5;
  // 最后更新时间
  google.protobuf.Timestamp last_updated = 4;
  // 引用链接
  string deep_link = 6;
}

message FlowEvent {
  string event_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string event_type = 3;
  string source_service = 4;
  string document_number = 5;
  common.v1.DocumentType document_type = 6;
  string previous_status = 7;
  string new_status = 8;
  common.v1.RequestContext context = 99;
}

message FlowSummary {
  int32 total_active_flows = 1;
  int32 delayed_flows = 2;
  int32 completed_flows_today = 3;
}

// ============================================================================
// RPC 消息定义
// ============================================================================

// 跟踪请求
message TrackRequest {
  // 要跟踪的主文档编号 (例如, 销售订单号或采购订单号)
  string document_number = 1;
  common.v1.RequestContext context = 99;
}

message SubscribeRequest {
  repeated string event_types = 1;
  repeated string document_numbers = 2; // Filter by specific documents
  common.v1.RequestContext context = 99;
}

message GetFlowSummaryRequest {
  common.v1.DateRange period = 1;
  common.v1.RequestContext context = 99;
}
